<resources>
    <string name="app_name">SuitmediaUserApp</string>
    <string name="hint_name">Name</string>
    <string name="hint_palindrome">Palindrome</string>
    <string name="check">CHECK</string>
    <string name="next">NEXT</string>
    <string name="OK">OK</string>
    <string name="welcome">Welcome</string>
    <string name="name_placeholder">Rahma Danu Sadewa</string>
    <string name="selected_user_name">Selected User Name</string>
    <string name="choose_a_user">Choose a User</string>
    <string name="full_name">%1$s %2$s</string>
    <string name="try_again">Try Again</string>
    <string name="second_screen">Second Screen</string>
    <string name="third_screen">Third Screen</string>
    <string name="check_your_connection">Check your internet connection and try again</string>
    <string name="back_content_description">Back to previous screen</string>
    <string name="image_placeholder_content_description">Image placeholder</string>
    <string name="field_must_not_be_empty">Field must not be empty</string>
    <string name="palindrome_true">isPalindrome</string>
    <string name="palindrome_false">not palindrome</string>
</resources>